@@ -104,8 +104,8 @@ typedef enum
  * functions defined in oracle_utils.c
  */
 extern oracleSession *oracleGetSession(const char *connectstring, char *user, char *password, const char *nls_lang, const char *tablename, int transaction);
-extern void oracleReleaseSession(oracleSession *session, struct oraTable *oraTable, int close, int error);
-extern void oracleCloseStatement(oracleSession *session, const struct oraTable *oraTable);
+extern void oracleReleaseSession(oracleSession *session, int close, int error);
+extern void oracleCloseStatement(oracleSession *session);
 extern void oracleCloseConnections(void);
 extern void oracleShutdown(void);
 extern int oracleIsStatementOpen(oracleSession *session);
